[package]
name = "dyswarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
udp2p = { git = "https://github.com/ASmithOWL/udp2p" }
theater = { git = "https://github.com/vrrb-io/theater" }
sha256 = "1.1.1"
rand = { version = "0.8.5", features = ["std"] }
thiserror = "1.0"
ritelinked = { version = "0.3.2", features = ['serde'] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.36"
bytes = "1.3.0"
crossbeam-channel = "0.5.6"
raptorq = "1.7.0"
qp2p = "0.30.0"
hex = "0.4.3"
lru_time_cache = "0.11.11"
async-trait = "0.1.68"
